hd-53 - List positions endpoint
