# src/app/Http/Controllers/api/v1/admin/PositionController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers\api\v1\admin;
 
 use App\Http\Controllers\Controller;
 use App\Http\Requests\admin\StorePositionRequest;
+use App\Http\Resources\admin\PositionCollection;
 use App\Models\Position;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
@@ -11,12 +12,83 @@ use Illuminate\Http\Request;
 class PositionController extends Controller
 {
     /**
+     * Returns all positions
+     *
+     * It is returning the positions in pagination
+     * the amount of positions per page is 20.
+     *
      * @return JsonResponse
+     *
+     * @OA\Get(
+     *     path="/api/v1/admin/position?page=1",
+     *     tags={"Admin - Position"},
+     *     summary="List of the positions",
+     *     description="List of the positions",
+     *     operationId="listPositions",
+     *     security={{ "bearer": {} }},
+     *     @OA\Response(
+     *         response=200,
+     *         description="List of positions",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="data", type="array", example={{"id": "MYPOS1", "name": "Senador", "description": "Description del cargo de senador", "country": {"id": "COL","name": "Colombia", "continent": "América del Sur"}, "state": {"id": "5","name": "ANTIOQUIA"}, "city": {"id": "1017","name": "Turbo"}}, {"id": "MYPOS1", "name": "Senador", "description": "Description del cargo de senador", "country": {"id": "COL","name": "Colombia", "continent": "América del Sur"}, "state": {"id": "5","name": "ANTIOQUIA"}, "city": {"id": "1017","name": "Turbo"}}},
+     *                  @OA\Items(
+     *                      @OA\Property(property="id", type="string", example="MYPOS1"),
+     *                      @OA\Property(property="name", type="string", example="Senador"),
+     *                      @OA\Property(property="description", type="string", format="text", example="Descripción cargo de senador"),
+     *                      @OA\Property(
+     *                          property="country",
+     *                          type="array",
+     *                          example={"id": "COL","name": "Colombia", "continent": "América del Sur"},
+     *                          @OA\Items(
+     *                              @OA\Property(property="id", type="string", example="COL"),
+     *                              @OA\Property(property="name", type="string", example="Colombia"),
+     *                              @OA\Property(property="continent", type="string", example="América del Sur")
+     *                          ),
+     *                      ),
+     *                      @OA\Property(
+     *                          property="state",
+     *                          type="array",
+     *                          example={"id": "5","name": "ANTIOQUIA"},
+     *                          @OA\Items(
+     *                              @OA\Property(property="id", type="integer", example="5"),
+     *                              @OA\Property(property="name", type="string", example="ANTIOQUIA"),
+     *                          ),
+     *                      ),
+     *                      @OA\Property(
+     *                          property="city",
+     *                          type="array",
+     *                          example={"id": "1017","name": "Turbo"},
+     *                          @OA\Items(
+     *                              @OA\Property(property="id", type="integer", example="1017"),
+     *                              @OA\Property(property="name", type="string", example="Turbo"),
+     *                          ),
+     *                      ),
+     *                  ),
+     *              ),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", format="text", example="Unauthenticated"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=403,
+     *         description="User without permission to thi endpoint",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", format="text", example="Permission denied."),
+     *         ),
+     *     ),
+     * )
      */
     public function index(): JsonResponse
     {
         try {
-            return response()->json(['message' => 'Listing'], 200);
+            $positions = Position::orderBy('name', 'asc')->paginate(20);
+
+            return (new PositionCollection($positions))->response()->setStatusCode(200);
 
         } catch (\Throwable $e) {
             return response()->json(['message' => $e->getMessage()], 500);
